# test

./: a.cpp
cpptest/: .clang-format  enum  enum.cpp  malloc  malloc.cpp  multi_thread  multi_thread.cpp  myconcept  myconcept.cpp  operate_new  operate_new.cpp  pointer  pointer.cpp
cpptest/clang_check/: .clang-tidy  test  test.cpp
cpptest/cmaketest/project/ExternalLib/: CMakeLists.txt
cpptest/cmaketest/project/ExternalLib/src/: CMakeLists.txt  main.cpp
cpptest/cmaketest/project/Function/: CMakeLists.txt
cpptest/cmaketest/project/HostSystemInfo/: CMakeLists.txt
cpptest/cmaketest/project/HostSystemInfo/src/: CMakeLists.txt  main.cpp
cpptest/cmaketest/project/LibraryProperty/: CMakeLists.txt
cpptest/cmaketest/project/LibraryProperty/src/: CMakeLists.txt  helloLib.cpp
cpptest/cmaketest/project/OutputPath/: CMakeLists.txt
cpptest/cmaketest/project/OutputPath/src/: CMakeLists.txt  helloLib.h  main.cpp
cpptest/cmaketest/project/configFile/: CMakeLists.txt  input.h
cpptest/cmaketest/project/customInstall/: CMakeLists.txt  run_custom_install.sh
cpptest/cmaketest/project/customInstall/doc/: custom_install_doc.txt
cpptest/cmaketest/project/customInstall/src/: CMakeLists.txt  main.cpp
cpptest/cmaketest/project/hello/: CMakeLists.txt  test.cpp
cpptest/cmaketest/project/helloLibrary/: CMakeLists.txt  Main.cpp  helloLib.cpp
cpptest/cmaketest/project/subDirectory/: CMakeLists.txt
cpptest/cmaketest/project/subDirectory/src/: CMakeLists.txt  main.cpp
cpptest/code/: Upgrading
cpptest/code/UpgradingToCpp20/: LICENSE
cpptest/code/UpgradingToCpp20/lab1/: README.md
cpptest/code/UpgradingToCpp20/lab1/partial/: Makefile  main  main.cpp  tests
cpptest/code/UpgradingToCpp20/lab1/spoilers/: main  main.cpp  tests
cpptest/code/UpgradingToCpp20/lab2/: README.md
cpptest/code/UpgradingToCpp20/lab2/partial/: main.cpp
cpptest/code/UpgradingToCpp20/lab2/spoilers/: Makefile  Makefile.msvc  main.cpp
cpptest/code/UpgradingToCpp20/lab3/: README.md
cpptest/code/UpgradingToCpp20/lab4/: README.md
cpptest/code/UpgradingToCpp20/lab5/: README.md
cpptest/code/UpgradingToCpp20/lab6/: README.md
cpptest/code/UpgradingToCpp20/lab7/: README.md
cpptest/demo/: demo1  demo1.cpp  demo2.cpp  demo3.cpp  demon.cpp  demontest.cpp  test  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp
cpptest/demo/c++new/: cputest  cputest.cpp  test1  test1.cpp  test10  test10.cpp  test11  test11.cpp  test12  test12.cpp  test13  test13.cpp  test14  test14.cpp  test15  test15.cpp  test16  test16.cpp  test17  test17.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp  test6  test6.cpp  test7  test7.cpp  test8  test8.cpp  test9  test9.cpp  test_string_view  test_string_view.cpp
cpptest/demo/mythread/: test1  test1.cpp
cpptest/just_for_test/: async  async.cpp  namespace  namespace.cpp
(+28 files in other folders)
